force-app/main/default/objects/Retry_Log__c/Retry_Log__c.object-meta.xml
<CustomObject>
    <label>Retry Log</label>
    <pluralLabel>Retry Logs</pluralLabel>
    <nameField>
        <label>Retry Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>RTL-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>