force-app/main/default/objects/Retry_Log__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <label>Failure Reason</label>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>