force-app/main/default/objects/Retry_Log__c/fields/Incident__c.field-meta.xml
<CustomField>
    <fullName>Incident__c</fullName>
    <label>Incident</label>
    <type>Lookup</type>
    <referenceTo>Incident__c</referenceTo>
    <relationshipName>Retry_Logs</relationshipName>
    <relationshipLabel>Retry Logs</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>