force-app/main/default/objects/Retry_Log__c/fields/Retry_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Retry_Attempt__c</fullName>
    <label>Retry Attempt</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>