force-app/main/default/objects/Retry_Log__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <label>Tenant</label>
    <type>Lookup</type>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipName>Retry_Logs</relationshipName>
    <relationshipLabel>Retry Logs</relationshipLabel>
</CustomField>